bims/static/css/map.css
/* ... */
.download-control-panel .download-format-selector-container {
    margin-left: 49px;
    margin-top: 0;
    display: none;
    width: auto;
}

.zoom-control {
    font-size: 11pt;
    padding: 7px 0;
    position: absolute;
    left: 0;
    top: 60px;
    background-color: rgba(219, 175, 0, 0.7);
    margin-left: 31px;
    border-radius: 0;
    color: white;
    width: 54px;
    height: 33px;
    z-index: 11;
    text-align: center;
    box-shadow: none;
}

.sub-zoom-control {
    padding-left: 0 !important;
    padding-right: 0 !important;
}

.sub-zoom-control:hover {
    color: #323437 !important;
}

.sub-control-panel {
    padding-top: 5px;
    padding-bottom: 5px;
    margin-left: -6px;
    margin-right: -6px;
}

.control-panel-selected {
    background-color: #1b900d;
    padding-right: 0;
    color: white !important;
}

.sub-control-panel:hover, .sub-zoom-control:hover {
    cursor: pointer;
    color: #323437;
}

@media (max-width: 800px) and (min-width: 500px) {
    .panel-wrapper {
        width: 40%;
    }
}

@media (max-width: 500px) {
    .panel-wrapper {
        width: 100%;
    }
}

.green {
    color: #436461;
    font-size: 20pt;
    margin-bottom: 0;
}

.about-links {
    border-left: 2px solid #436461;
    padding: 15px 20px;
}

.about-links p {
    margin-bottom: 5px;
}

.dropdown-toggle {
    color: transparent;
}

.panel-loading {
    display: none;
    margin-top: 50px;
}

.panel-loading img {
    margin-left: auto;
    margin-right: auto;
    display: block;
}

.map-control-panel-box {
    width: 265px;
    background-color: white;
    position: absolute;
    top: 0;
    color: black;
    padding: 5px 15px 0;
    border: none;
    z-index: 10;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
    text-align: center;
    font-weight: normal;
    border-radius: 0;
    margin-left: 85px;
    margin-top: 60px;
}

.map-search-result {
    margin-left: 351px !important;
    padding-bottom: 0;
    min-height: 209px;
}

.map-search-result .search-box {
    color: white;
    padding-top: 10px;
    font-weight: 700;
    font-size: 16px;
}

#search-result-content {
    margin-right: -15px;
    margin-left: -15px;
}

#search-result-content .search-results-total {
    background: ghostwhite;
    padding-right: 15px;
    padding-left: 15px;
    padding-top: 5px;
    padding-bottom: 5px;
    font-weight: normal;
    font-size: 16px;
}

#search-result-content .result-search {
    font-size: 8pt;
    text-align: left;
    padding-left: 17px;
    margin-bottom: 0;
    padding-right: 17px;
    background-color: white;
    color: #4e4e4e;
    cursor: pointer;
}

#search-result-content .result-search:hover {
    background: ghostwhite;
}

#search-result-content p {
    margin-bottom: 0;
}

#search-result-content .search-results-section {
    max-height: 500px;
    overflow-y: auto;
    margin-right: -17px;
}

.search-results-wrapper {
    overflow-x: hidden;
}

.layers-selector-container {
    display: none;
    padding-bottom: 0 !important;
    max-height: 500px;
}

.layers-selector-container .content {
    border-top: 1px solid darkgray;
    margin-top: 3px;
    max-height: 500px;
    overflow-y: auto;
}

#layers-selector {
    max-height: 450px;
    padding: 0;
}

#layers-selector li {
    max-width: 100%;
    height: auto;
    padding: 0;
}

#layers-selector li:hover .options {
    display: block;
}

#layers-selector li .row-title {
    padding: 5px;
}

#layers-selector li .row-title label {
    margin-bottom: 0;
}

#layers-selector .options {
    display: none;
    padding-left: 25px;
    padding-bottom: 20px;
    padding-top: 5px;
    background: #ededed;
    box-shadow: inset 0 0 4px #888;
}

#layers-selector .options label {
    font-size: 12px;
}

.ui-state-default {
    display: block;
    white-space: nowrap;
    overflow: hidden;
    max-height: 500px;
    font-size: 11pt;
    text-overflow: ellipsis;
    max-width: 245px;
}

.download-format-selector-container {
    padding-top: 0;
    padding-bottom: 0;
}

.download-format-selector-container li {
    padding-left: 20px;
    padding-right: 20px;
    font-size: 18px;
}

.map-control-panel-box ul {
    list-style-type: none;
    padding: 5px;
    margin-bottom: 0;
    display: block;
}

.map-control-panel-box li {
    text-align: left;
    background: none;
    color: black;
    padding-top: 2px;
    padding-bottom: 2px;
    padding-left: 5px;
    padding-right: 5px;
    border: none;
    cursor: pointer;
    height: 40px;
}

.map-control-panel-box li:hover {
    background-color: rgba(0, 0, 0, 0.2);
}

.layer-selector-input {
    margin-right: 5px;
    cursor: pointer;
}

.locate-options-container {
    display: none;
    padding-bottom: 0 !important;
}

#locate-options {
    list-style-type: none;
    padding-left: 0;
    margin-bottom: 0;
}

#locate-options li {
    text-align: left;
    background: none;
    color: black;
    padding: 5px 10px;
    border: none;
    cursor: pointer;
}

#locate-options li:hover {
    background-color: rgba(0, 0, 0, 0.2);
}

.locate-options-container .content {
    border-top: 1px solid darkgray;
    margin-top: 3px;
}

.map-control-panel-box .title {
    font-size: 16pt;
    line-height: 20px;
}

.map-filter-title {
    margin-top: 5px;
    margin-bottom: 5px;
    font-size: 16pt;
}

.map-control-panel-box .subtitle, .search-results-total {
    background-color: ghostwhite;
    text-align: left;
    padding: 5px;
    border-bottom: 1px solid rgb(227, 227, 227);
}

.filter-icon-arrow {
    line-height: 18pt;
}

.filter-content {
    text-align: left;
    max-height: 300px;
    overflow-y: scroll;
    padding-top: 5px;
}

.map-control-panel-box .close-button, .close-panel {
    cursor: pointer;
    padding: 0 5px;
    border: 2px solid black;
    font-size: 12pt;
    font-weight: bolder;
    line-height: 20px;
    margin-right: 3px;
}

.map-control-panel-box .close-button:hover, .close-panel:hover {
    background-color: rgba(0, 0, 0, 0.7) !important;
    color: white !important;
}
/* ... */

